Fix overflow fix styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -674,6 +674,10 @@ svg {
   bottom: 0;
   right: 0;
   left: 0;
+
+  .overflow-fix {
+    display: none;
+  }
 }
 
 .note-show-dropdown {
